--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,7 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+
+:root {
+  --ion-background-color: #e0f7e9; // cor que você quiser
+}
