--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -29,7 +29,7 @@
             <ion-input-password-toggle slot="end" color="red"></ion-input-password-toggle>
           </ion-input>
         </div>
-        <a href="#" class="forgot-password">Esqueci minha senha</a>
+        <a routerLink="/redefsenha" class="forgot-password">Esqueci minha senha</a>
       </div>
 
       <!-- Botão -->
