Animações (Login, Cadastro, Redef)

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-content>
   <ion-header>
-    <img src="../../assets/logo2.png" alt="">
+    <img class="logo" src="../../assets/logo2.png" alt="">
     <p>Acompanhe sua plantação de forma <br> inteligente</p>
     
    
