--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,10 +10,23 @@ ion-content {
   margin-top: 50px;
 }
 
-.logo {
+.logo{
   width: 250px;
-  height: 80px;
+  height: auto;
+  margin-top: 10px;   
+  animation: slideUp 0.5s ease forwards;
 }
+
+@keyframes slideUp {
+  from {
+      transform: translateY(40px);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
 
 /* Caixa de login */
 .login {
@@ -27,10 +40,17 @@ ion-content {
 }
 
 /* Título e subtítulo */
+
 .textlogin {
+  animation: fadeIn 2s ease forwards;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@keyframes fadeIn {
+  from { opacity: -10; }
+  to { opacity: 5; }
 }
 
 h1 {
