--- a/src/app/redefsenha/redefsenha.page.scss
+++ b/src/app/redefsenha/redefsenha.page.scss
@@ -13,7 +13,20 @@ ion-content {
 .logo {
   width: 250px;
   height: 80px;
+  animation: slideUp 0.5s ease forwards;
 }
+
+@keyframes slideUp {
+  from {
+      transform: translateY(40px);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
 
 /* Caixa de login */
 .login {
@@ -31,6 +44,12 @@ ion-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: -10; }
+  to { opacity: 5; }
 }
 
 h1 {
