--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,10 +1,13 @@
 <ion-content>
   <ion-header>
-    <img class="logo" src="../../assets/logo2.png" alt="">
-    <p>Acompanhe sua plantação de forma <br> inteligente</p>
+    <img class="logo" src="../../assets/logo2.png" alt="" />
+    <p>
+      Acompanhe sua plantação de forma <br />
+      inteligente
+    </p>
   </ion-header>
 
-  <ion-card style="background-color: #E3A330; color: #fff;">
+  <ion-card style="background-color: #e3a330; color: #fff">
     <ion-card-header>
       <ion-card-title><strong>Umidade do Solo</strong></ion-card-title>
       <ion-icon name="water-outline"></ion-icon>
@@ -12,20 +15,38 @@
 
     <ion-card-content>
       <div class="porcent">
-        <ion-progress-bar [value]="umidade / 100"></ion-progress-bar>
-
-
+        <ion-progress-bar
+          [value]="umidade / 100"
+          [color]="getColor(umidade)"
+        ></ion-progress-bar>
 
         <p>{{ umidade }}%</p>
       </div>
-     <p class="status">Status: 
-  <strong *ngIf="umidade <= 30">Úmido 🫧</strong>
-  <strong *ngIf="umidade > 30 && umidade <= 60">Ideal 😎</strong>
-  <strong *ngIf="umidade > 60">Seco 🌵</strong>
-</p>
+      <p class="status">
+        Status:
+        <strong *ngIf="umidade <= 30">Úmido 🫧</strong>
+        <strong *ngIf="umidade > 30 && umidade <= 60">Ideal 😎</strong>
+        <strong *ngIf="umidade > 60">Seco 🌵</strong>
+      </p>
       <p class="atuali">Última atualização: {{ ultimaAtualizacao }}</p>
     </ion-card-content>
   </ion-card>
+
+<ion-card *ngIf="clima?.atual" style="background-color: #C56D47; color: #fff">
+  <ion-card-header>
+    <ion-card-title>
+      Temperatura
+    </ion-card-title>
+    <ion-icon name="partly-sunny-outline"></ion-icon>
+  </ion-card-header>
+  <ion-card-content>
+    <p></p>
+    🌡️ Temperatura: {{ clima?.atual.temperatura }} °C <br>
+    💨 Vento: {{ clima?.atual.vento }} m/s <br>
+    🕒 Hora: {{ clima?.atual.hora }}
+  </ion-card-content>
+</ion-card>
+
 
   <p class="user-info">{{ userEmail }}</p>
 </ion-content>
